# rustic-reader

./: .gitignore  .publish.sh  Cargo.toml  README.md  test-server.sh
.cargo/: config.toml
cli-epub-to-text/: Cargo.toml
cli-epub-to-text/src/: lib.rs  main.rs
cli-justify/: Cargo.toml
cli-justify/src/: lib.rs  main.rs
cli-pdf-reader/: Cargo.toml
cli-pdf-reader/src/: lib.rs  main.rs
cli-pdf-to-text/: Cargo.toml
cli-pdf-to-text/src/: lib.rs  main.rs
cli-pdf-to-text/tests/: cli_test.rs
cli-text-reader/: Cargo.toml
cli-text-reader-online/: Cargo.toml
cli-text-reader-online/src/: lib.rs  main.rs  progress.rs
cli-text-reader/src/: config.rs  editor.rs  lib.rs  main.rs  progress.rs  tutorial.rs
docs/: README.md
docs/pages/: README.md  benchmark.md  getting-started.md  reference.md
hygg/: Cargo.toml
hygg-server/: Cargo.toml
hygg-server/src/: main.rs
hygg/src/: main.rs
ocrs-cli/: Cargo.toml
redirect-stderr/: Cargo.toml
redirect-stderr/src/: lib.rs
rustic-reader/: Cargo.toml
rustic-reader/src/: lib.rs  main.rs
test-data/txt/: cli-pdf-to-text-0.1.1-pdfreference1.7old.pdf.txt  pdftotext-24.02.0-pdfreference1.7old.pdf.txt
