[workspace]
resolver = "2"

members = [
  "cli-pdf-to-text",
  "cli-epub-to-text",
  "cli-justify",
  "cli-text-reader",
  "cli-text-reader-online",
  "redirect-stderr",
  "hygg",
  "hygg-server",

  # Internal
  # "examples",
]

[workspace.lints.rust]
unused_parens = "allow"
unused_imports = "allow"

[workspace.lints.clippy]
needless_return = "allow"
implicit_saturating_sub = "allow"
single_component_path_imports = "allow"
