[package]
name = "cli-justify"
version = "0.1.6"
edition = "2021"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/rustic-reader"
description = "A CLI text justify tool"
keywords = ["pdf", "cli", "parser", "terminal", "utility"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
getopts = "0.2"
