[package]
name = "cli-pdf-to-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unused_parens = "allow"

[lints.clippy]
needless_return = "allow"

[dependencies]
getopts = "0.2"

pdf-extract = "0.7"
lopdf = "0.32"
