[package]
name = "cli-pdf-to-text"
version = "0.1.7"
edition = "2021"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/rustic-reader"
description = "A CLI pdf to plain text converter"
keywords = ["pdf", "cli", "parser", "terminal", "utility"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
redirect-stderr = { version = "0.1", path= "../redirect-stderr" }

getopts = "0.2"

pdf-extract = "0.7"
lopdf = "0.34"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3" }

[dev-dependencies]
rayon = "1"
