[package]
name = "cli-text-reader"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/rustic-reader"
description = "A minimalistic ebook reader"
keywords = ["pdf", "cli", "parser", "terminal", "utility"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
cli-justify = { version = "0.1", path = "../cli-justify" }

getopts = "0.2"
crossterm = "0.22"
atty = "0.2"
