[package]
name = "hygg-server"
version = "0.1.11"
edition = "2021"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/hygg"
description = "A less like CLI text reader"
keywords = ["pdf", "cli", "parser", "terminal", "utility"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

[lints]
workspace = true

[dependencies]
