[package]
name = "hygg-server"
version = "0.1.11"
edition = "2021"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/hygg"
description = "A less like CLI text reader"
keywords = ["pdf", "cli", "parser", "terminal", "utility"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

[lints]
workspace = true

[dependencies]
tokio = { version = "1.12", features = ["macros", "fs", "rt-multi-thread"] }
warp = "0.3"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"
tracing-subscriber = "0.3"
serde = "1.0"
serde_derive = "1.0"

cli-text-reader-online = { version = "0.1", path = "../cli-text-reader-online" }
polodb_core = "5.1.3"
chrono = { version = "0.4", features = ["serde"] }
