[package]
name = "redirect-stderr"
version = "0.1.10"
edition = "2021"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/hygg"
description = "A cross platform lib to redirect std-err"
keywords = ["pdf", "cli", "parser", "terminal", "utility"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]

# redirect-stderr dependencies
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3" }
