[package]
name = "rustic-reader"
version = "0.1.4"
edition = "2021"
default-run = "rustic-reader"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/rustic-reader"
description = "A minimalistic ebook reader"
keywords = ["pdf", "cli", "parser", "terminal", "utility"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
cli-pdf-to-text = { version = "0.1", path = "../cli-pdf-to-text" }
cli-epub-to-text = { version = "0.1", path = "../cli-epub-to-text" }
cli-justify = { version = "0.1", path = "../cli-justify" }
cli-text-reader = { version = "0.1", path = "../cli-text-reader" }
redirect-stderr = { version = "0.1", path= "../redirect-stderr" }

getopts = "0.2"
